fixed the divs with overflow

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
   display: inline-block;
   margin-bottom: 4px;
   border-radius: 50px;
+  position: relative;
+  overflow: hidden;
 
 }
 
